# python_for_data_science

./: doc_string_example.txt  setup.cfg
00Starting/ex03/: NULL_not_found.py
00Starting/ex04/: whatis.py
00Starting/ex09/: README.md  pyproject.toml
01Array/ex00/: give_bmi.py  tester.py
01Array/ex01/: array2D.py  tester.py
01Array/ex02/: load_image.py  tester.py
01Array/ex03/: load_image.py  zoom.py
01Array/ex04/: rotate.py
01Array/ex05/: pimp_image.py
02Data_table/: note_env.txt
02Data_table/ex00/: load_csv.py
02Data_table/ex01/: aff_life.py  load_csv.py
02Data_table/ex02/: aff_pop.py  roadmap_ex02.txt
02Data_table/ex03/: projection_life.py
03OOP/: python.txt
03OOP/ex02/: S1E7.py  S1E9.py
03OOP/ex03/: ft_calculator.py
03OOP/ex04/: ft_calculator.py
DOT/ex00/: statistics.py
DOT/ex01/: in_out.py
DOT/ex02/: callLimit.py
DOT/ex03/: new_student.py
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py  ft_filter.py
ex07/: sos.py
ex08/: Loading.py
ex09/: LICENSE  pyproject.toml
ex09/ft_package/: count_in_list.py
ex09/src/ft_package/: count_in_list.py
ex09/src/ft_package.egg-info/: PKG-INFO
