[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
  { name="tebandam", email="fakemail@42.fr" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"

[tool.setuptools]
packages = ["ft_package"]
